<resources>
    <string name="app_name">Auth</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="register_msg">Already have an account? Login Here</string>
    <string name="login_msg">No Account? Register Here</string>
    <string name="name">User Name</string>
    <string name="number">Phone Number</string>
    <string name="login2">Login</string>
    <string name="nothing">"KSH. 0.00"</string>
    <string name="event_date">Event Date</string>
    <string name="event">Event</string>
    <string name="register_event">Register Event</string>
    <string name="number_of_tickets">Number of Tickets</string>
    <string name="total_amount">VIP Class\: KSH. 4,500. \n Business Class\: KSH. 2000.</string>
    <string name="view">View</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="event_desc">When a new userRegistration signs up using your app\'s sign-up form, complete any new account validation steps that your app requires, such as verifying that the new account\'s password was correctly typed and meets your complexity requirements. \n 8:00pm to Dawn. \n All Are Welcome\!</string>
    <string name="confirm">Confirm Attendance</string>
    <string name="business_class">Click <b>VIEW</b> to confirm Ticket registration</string>
    <string name="no_of_tickets">No of Tickets</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string-array name="event_class">
        <item>Select Class</item>
        <item>VIP Class</item>
        <item>Business Class</item>
    </string-array>
</resources>