<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:background="@color/colorAccent"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/user_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/business_class"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight=".5"
            android:background="@color/colorAccent"
            android:text="@string/view"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submit_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textAllCaps="true"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>