<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:weightSum="1">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".9"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/textColor">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawableLeft="@drawable/email"
                    android:inputType="text|textCapWords" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/textColor">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/user"
                    android:drawableLeft="@drawable/user"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/textColor">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pass_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:drawableLeft="@drawable/password"
                    android:inputType="textPassword" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number"
                android:textColorHint="@color/textColor">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone"
                    android:drawableLeft="@drawable/phone"
                    android:inputType="phone" />


            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFA000"
                android:hint="@string/register"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/register_tvt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/register_msg"
                android:textColor="@color/textColor"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/progress_on"
        android:visibility="gone" />
</RelativeLayout>